# TradeLens

./: .env.example  .gitignore  TradeLens.code-workspace  main.py  pyproject.toml
alphaca_alert/: main.py
alphaca_alert/api/: main.py
alphaca_alert/api/services/: symbols.py
alphaca_alert/migrations/: env.py
alphaca_alert/migrations/versions/: 0001_create_symbols_table.py  0002_create_orders_table.py  0003_create_price_alerts_table.py
backend/: .env.example  pyproject.toml
backend/app/: config.py
backend/app/api/: database.py  main.py  models.py
backend/app/api/services/: symbols.py
backend/app/api/services/auth/: crypto.py  router.py  schemas.py
backend/app/auth/: crypto.py  router.py
backend/migrations/: env.py
backend/migrations/versions/: f91a3b53a0dc_add_users_and_user_alpaca_tokens.py
docs/: business_requirements.md  data_models.md
frontend/: components.json  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/.storybook/: main.js  preview.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
frontend/src/design-tokens/:  colors-semantic.json  Inter.tokens.json  colors-primitive.json  colors-scale.json  radius.json  spacing.json  tokens.css  typography.json
frontend/src/router/: index.js
frontend/src/stores/: alerts.js  orders.js  symbols.js
frontend/src/views/: AlertsView.vue  DashboardView.vue  LoginView.vue  OrdersView.vue  PlaceholderView.vue  RegisterView.vue  (+1 more)
infra/: .env.example
infra/clickhouse/: docker-compose.yml  init.sh
infra/postgres/: docker-compose.yml  init.sh
(+40 files in other folders)
