[project]
name = "streaming-stock-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "alpaca-py>=0.43.3",
    "arrow>=1.4.0",
    "fastapi[standard]>=0.136.1",
    "finnhub-python>=2.4.27",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]

